--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         }, 2500 );
     </script>
     <body>
+    <div class="centrar">
         <a href="Examen.xml"><button class="button">Click Me! To see results...</button></a>
+    </div>
     </body>	
 </html>
